--- a/config.toml
+++ b/config.toml
@@ -4,8 +4,10 @@ theme = "ananke"
 title = "My New Hugo Site"
 [languages]
 [languages.en]
+contentDir = "content/en"
 languageName = "English"
 weight = 1
 [languages.zh]
+contentDir = "content/zh"
 languageName = "中文"
 weight = 2
