--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,13 @@
 baseURL = "http://example.org/"
-languageCode = "en-us"
 theme = "ananke"
-title = "My New Hugo Site"
 [languages]
 [languages.en]
 contentDir = "content/en"
 languageName = "English"
+title = "My Blog"
 weight = 1
 [languages.zh]
 contentDir = "content/zh"
 languageName = "中文"
+title = "朕的部落格"
 weight = 2
